Get photometry -> json working

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "2nQvUguV__Pj"
    },
@@ -24,14 +24,14 @@
     "\n",
     "from panoptes_client import SubjectSet, Panoptes\n",
     "\n",
-    "from src.lsst_zooniverse.generator import LSSTSubjectGenerator, TripletImageLocation\n",
+    "from src.lsst_zooniverse.generator import LSSTSubjectGenerator, TripletImageLocation, ScienceImageLocation, JSONLocation\n",
     "\n",
-    "from IPython.display import Image, display\n"
+    "from IPython.display import Image, display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,27 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<panoptes_client.panoptes.Panoptes at 0x1100eb770>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Panoptes.connect(username=zooniverse_username, password=zooniverse_password)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "id": "O75ut7D3__Pk"
    },
@@ -92,19 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 70 at radius 100.000000\n",
-      "Found 0 at radius 10.000000\n",
-      "Found 0 at radius 0.000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ra = 51.358273\n",
     "dec= -27.692442\n",
@@ -116,19 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "G8wPsuyg__Pl"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[169342390823813224, 169355605609809259, 169562325818802242, 169562328692424754, 169852561038770458, 313629129740648459, 313637935719645190, 313637935723315254, 313673106899599382, 313673106903269400]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Just join the objects table and the sherlock_classifications table, just\n",
     "# pulling out the objectId.\n",
@@ -146,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "xuxc4gG7__Pl"
    },
@@ -167,33 +138,20 @@
     "id": "ugmsQ1d2__Pl",
     "outputId": "0f9e5bd1-5e04-4bda-9422-70e74cfde2ce"
    },
-   "outputs": [
-    {
-     "ename": "LasairError",
-     "evalue": "HTTP return code 404 for\nhttps://lasair-lsst-dev.lsst.ac.uk/api/object/",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mLasairError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m subjects = []\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msubject_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubject\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mLSSTSubjectGenerator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobjectIds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlasair\u001b[49m\u001b[43m=\u001b[49m\u001b[43mL\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43msubjects\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43msubject\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdisplay\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSubject \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43msubject_index\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/lsst-subject-creator/src/lsst_zooniverse/generator.py:201\u001b[39m, in \u001b[36mLSSTSubjectGenerator.__next__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    198\u001b[39m         next_urls = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m.obj_image_urls)\n\u001b[32m    199\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    200\u001b[39m     \u001b[38;5;28mself\u001b[39m.obj_image_urls = \u001b[38;5;28miter\u001b[39m(\n\u001b[32m--> \u001b[39m\u001b[32m201\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlasair\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobject\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    202\u001b[39m \u001b[43m            \u001b[49m\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mobj_ids\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    203\u001b[39m \u001b[43m            \u001b[49m\u001b[43mlasair_added\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    204\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m[\n\u001b[32m    205\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mlasairData\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    206\u001b[39m         ][\u001b[33m\"\u001b[39m\u001b[33mimageUrls\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m    207\u001b[39m     )\n\u001b[32m    208\u001b[39m     next_urls = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m.obj_image_urls)\n\u001b[32m    210\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.generate(next_urls)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/lsst-subject-creator/.venv/lib/python3.13/site-packages/lasair/lasair.py:144\u001b[39m, in \u001b[36mlasair_client.object\u001b[39m\u001b[34m(self, objectId, lite, lasair_added, reliabilityThreshold)\u001b[39m\n\u001b[32m    130\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\" Get object page in machine-readable form\u001b[39;00m\n\u001b[32m    131\u001b[39m \u001b[33;03margs:\u001b[39;00m\n\u001b[32m    132\u001b[39m \u001b[33;03m    objectId: objectId\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    136\u001b[39m \u001b[33;03m    dictionary of all the information \u001b[39;00m\n\u001b[32m    137\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    139\u001b[39m \u001b[38;5;28minput\u001b[39m = {\n\u001b[32m    140\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mobjectId\u001b[39m\u001b[33m'\u001b[39m:objectId, \n\u001b[32m    141\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mlite\u001b[39m\u001b[33m'\u001b[39m:lite, \n\u001b[32m    142\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mlasair_added\u001b[39m\u001b[33m'\u001b[39m:lasair_added, \n\u001b[32m    143\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mreliabilityThreshold\u001b[39m\u001b[33m'\u001b[39m:reliabilityThreshold}\n\u001b[32m--> \u001b[39m\u001b[32m144\u001b[39m result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mobject\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    146\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/lsst-subject-creator/.venv/lib/python3.13/site-packages/lasair/lasair.py:81\u001b[39m, in \u001b[36mlasair_client.fetch\u001b[39m\u001b[34m(self, method, input)\u001b[39m\n\u001b[32m     78\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[32m     79\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m81\u001b[39m result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfetch_from_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmethod\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     83\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33merror\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[32m     84\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/lsst-subject-creator/.venv/lib/python3.13/site-packages/lasair/lasair.py:63\u001b[39m, in \u001b[36mlasair_client.fetch_from_server\u001b[39m\u001b[34m(self, method, input)\u001b[39m\n\u001b[32m     61\u001b[39m     message = \u001b[33m'\u001b[39m\u001b[33mHTTP return code \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m for\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m % r.status_code\n\u001b[32m     62\u001b[39m     message += url\n\u001b[32m---> \u001b[39m\u001b[32m63\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m LasairError(message)\n\u001b[32m     64\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[31mLasairError\u001b[39m: HTTP return code 404 for\nhttps://lasair-lsst-dev.lsst.ac.uk/api/object/"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subjects = []\n",
-    "for subject_index, subject in enumerate(LSSTSubjectGenerator(objectIds, lasair=L, media_generators=[TripletImageLocation]), start=1):\n",
+    "for subject_index, subject in enumerate(LSSTSubjectGenerator(objectIds, lasair=L, media_generators=[TripletImageLocation, JSONLocation]), start=1):\n",
     "    subjects.append(subject)\n",
     "    display(f\"Subject {subject_index}\")\n",
     "\n",
     "    for location, media_file in zip(subject.locations, subject._media_files):\n",
-    "        display(Image(data=media_file))\n",
+    "        if location == 'application/json':\n",
+    "            display(media_file)\n",
+    "        else:\n",
+    "            display(Image(data=media_file))\n",
     "\n",
-    "# SubjectSet(SUBJECT_SET_ID).add(subjects)\n"
+    "# SubjectSet(SUBJECT_SET_ID).add(subjects)"
    ]
   }
  ],
