--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from panoptes_client import SubjectSet, Panoptes\n",
     "\n",
-    "from src.lsst_zooniverse.generator import LSSTSubjectGenerator, TripletImageLocation, ScienceImageLocation, JSONLocation\n",
+    "from src.zooniverse_lsst.generator import LSSTSubjectGenerator, TripletImageLocation, ScienceImageLocation, JSONLocation\n",
     "\n",
     "from IPython.display import Image, display"
    ]
